<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <EditText
        android:id="@+id/taskNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/task_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskDescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/taskStatusRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:checkedButton="@id/backlogRadioButton">

        <RadioButton
            android:id="@+id/backlogRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backlog" />

        <RadioButton
            android:id="@+id/toDoRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_do" />

        <RadioButton
            android:id="@+id/inProgressRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_progress" />

        <RadioButton
            android:id="@+id/reviewRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review" />

        <RadioButton
            android:id="@+id/doneRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />

    </RadioGroup>

    <Button
        android:id="@+id/saveTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Add Task" />

</LinearLayout>