<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginPageBackgroundColor"
    tools:context=".ui.fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:text="@string/edit_task_title"
            style="@style/TextAppearance.MaterialComponents.Headline6"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/task_name_text_input"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/task_description_text_input"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/task_description_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:checkedButton="@+id/radio_button_backlog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/radio_button_backlog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/backlog"/>
            <RadioButton
                android:id="@+id/radio_button_to_do"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/to_do"/>
            <RadioButton
                android:id="@+id/radio_button_in_progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/in_progress"/>
            <RadioButton
                android:id="@+id/radio_button_review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/review"/>
            <RadioButton
                android:id="@+id/radio_button_done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/done"/>
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/done_button"
                style="@style/Widget.Shrine.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/done_button" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>