<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_name_label"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

    <TextView
        android:id="@+id/detail_task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_description_label"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

    <TextView
        android:id="@+id/detail_task_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_status_label"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

    <TextView
        android:id="@+id/detail_task_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_creator_label"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

    <TextView
        android:id="@+id/detail_task_creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/detail_task_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.Button.Circle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_created_label"
        android:layout_margin="10dp"
        android:textColor="@color/colorPrimaryDark"
        style="@style/TextAppearance.MaterialComponents.Subtitle1"/>

    <TextView
        android:id="@+id/detail_task_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="5dp"
        style="@style/TextAppearance.MaterialComponents.Body1"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_task_button"
        style="@style/Widget.Shrine.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:text="@string/edit_task" />

    </RelativeLayout>

</LinearLayout>
