<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetailsActivity">

    <Button
        android:id="@+id/editTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="Edit"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/taskDetailsLayout"
        android:layout_width="375dp"
        android:layout_height="572dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/taskDetailsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/taskDetailsStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/taskDetailsDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/taskDetailsCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editInputsLayout"
        android:layout_width="372dp"
        android:layout_height="571dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTaskNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <RadioGroup
            android:id="@+id/editTaskStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:checkedButton="@id/editTaskBaclogRadioButton">

            <RadioButton
                android:id="@+id/editTaskBaclogRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/backlog" />

            <RadioButton
                android:id="@+id/editTaskToDoRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_do" />

            <RadioButton
                android:id="@+id/editTaskInProgressRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/in_progress" />

            <RadioButton
                android:id="@+id/editTaskReviewRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review" />

            <RadioButton
                android:id="@+id/editTaskDoneRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/updateTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="Update"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>